test/Neg/termina/resource_class/out_port.fin
interface TMChannelInterface {
    procedure get_tm_sent_packets(&mut self, packets : &mut u32);
};

resource class TMChannel provides TMChannelInterface {
    
  tm_sent_packets : u32;

  output_msg : out u32;

  procedure get_tm_sent_packets(&mut self, packets : &mut u32) {
    *packets = self->tm_sent_packets;
    return;
  }

};